// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`add widget to dashboard 1`] = `
Object {
  "cachedDashboardIds": Array [],
  "dashboardListOrder": "recent",
  "dashboardSettingsModal": Object {
    "dashboardId": null,
    "isVisible": false,
  },
  "dashboardShareModal": Object {
    "dashboardId": null,
    "isVisible": false,
  },
  "deleteConfirmation": Object {
    "dashboardId": null,
    "isVisible": false,
  },
  "items": Object {
    "@dashboard/01": Object {
      "error": null,
      "initialized": true,
      "isSaving": false,
      "settings": Object {
        "version": "0.0.1",
        "widgets": Array [
          "@widget/01",
        ],
      },
    },
  },
  "metadata": Object {
    "data": Array [
      Object {
        "id": "@dashboard/01",
        "isPublic": false,
        "lastModificationDate": 0,
        "publicAccessKey": null,
        "queries": 0,
        "tags": Array [],
        "title": null,
        "widgets": 1,
      },
    ],
    "error": null,
    "isInitiallyLoaded": false,
    "isLoaded": true,
    "isSavingMetadata": false,
  },
  "tagsFilters": Object {
    "showOnlyPublicDashboards": false,
    "tags": Array [],
  },
  "tagsPool": Array [],
}
`;

exports[`removes widget from dashboard 1`] = `
Object {
  "cachedDashboardIds": Array [],
  "dashboardListOrder": "recent",
  "dashboardSettingsModal": Object {
    "dashboardId": null,
    "isVisible": false,
  },
  "dashboardShareModal": Object {
    "dashboardId": null,
    "isVisible": false,
  },
  "deleteConfirmation": Object {
    "dashboardId": null,
    "isVisible": false,
  },
  "items": Object {
    "@dashboard/01": Object {
      "error": null,
      "initialized": true,
      "isSaving": false,
      "settings": Object {
        "version": "0.0.1",
        "widgets": Array [],
      },
    },
  },
  "metadata": Object {
    "data": Array [
      Object {
        "id": "@dashboard/01",
        "isPublic": false,
        "lastModificationDate": 0,
        "publicAccessKey": null,
        "queries": 0,
        "tags": Array [],
        "title": null,
        "widgets": 0,
      },
    ],
    "error": null,
    "isInitiallyLoaded": false,
    "isLoaded": true,
    "isSavingMetadata": false,
  },
  "tagsFilters": Object {
    "showOnlyPublicDashboards": false,
    "tags": Array [],
  },
  "tagsPool": Array [],
}
`;
